--- a/movie.css
+++ b/movie.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -214,6 +213,25 @@ h2 {
   font-weight: 500;
   text-transform: uppercase;
   border-bottom: 4px solid blue;
+  animation: headingUnderlineChange 5s infinite;
+}
+
+@keyframes headingUnderlineChange {
+  0% {
+    border-bottom-color: blue;
+  }
+  25% {
+    border-bottom-color: red;
+  }
+  50% {
+    border-bottom-color: black;
+  }
+  75% {
+    border-bottom-color: green;
+  }
+  100% {
+    border-bottom-color: blue;
+  }
 }
 
 .movies {
