--- a/movie.css
+++ b/movie.css
@@ -254,7 +254,7 @@ article img {
 }
 
 article img:hover {
-  transform: translateY(-10px);
+  transform: translateY(-10px) scale(1.05);
 }
 
 footer {
